# uboonedata

./: .gitignore  CMakeLists.txt  CMakePresets.json
CRT/: CMakeLists.txt  CMakeLists.txt~  CRTgains-V8.txt  CRTpedestals-V8.txt  CRTpositionsSiPM-V8.txt  FEB_ms_delay_V2.txt  FEB_ms_delay_V3.txt  correction_ts0.txt  t_map_V2_scale.txt
Calibration/: CMakeLists.txt  calibration_mcc8.4_v1.root  channelstatus_data.db  crt_channelstatus_data.db  dQdxCalibrationPlanev1.txt  detpedestals_data.db  detpmtgains_data.db  dqdx_xnorm_data.db  dqdx_xshape_plane0_data.db  dqdx_xshape_plane0_mc.db  dqdx_xshape_plane1_data.db  dqdx_xshape_plane1_mc.db  dqdx_xshape_plane2_data.db  dqdx_xshape_plane2_mc.db  dqdx_yz_plane0_mc.db  dqdx_yz_plane1_mc.db  dqdx_yz_plane2_mc.db  elifetime_data.db  hootgibson.db  lightyieldscale_data.db
DiffusionData/: 2019_08_15_sigma_map.root  CMakeLists.txt
Eventgenerator/: CMakeLists.txt
NuGraph/: CMakeLists.txt  model-numiallwr2.pt  model-numiallwr2_no-rms.pt
PandoraData/: CMakeLists.txt
ParticleID/: BraggLikelihoodMaps_mcc8_20190215.root  BraggLikelihoodMaps_mcc9_20190326.root  CMakeLists.txt
ProtonID/: CMakeLists.txt
Response/: CMakeLists.txt  quietWires.txt  uboone_response_128kV_gar_vw00_v0.1.root  uboone_response_128kV_gar_vw01_v0.1.root  uboone_response_128kV_gar_vw02_v0.1.root  uboone_response_40kV_gar_vw00_v0.1.root  uboone_response_40kV_gar_vw01_v0.1.root  uboone_response_40kV_gar_vw02_v0.1.root  uboone_response_45kV_gar_vw00_v0.1.root  uboone_response_45kV_gar_vw01_v0.1.root  uboone_response_45kV_gar_vw02_v0.1.root  uboone_response_50kV_gar_vw00_v0.1.root  uboone_response_50kV_gar_vw01_v0.1.root  uboone_response_50kV_gar_vw02_v0.1.root  uboone_response_55kV_gar_vw00_v0.1.root  uboone_response_55kV_gar_vw01_v0.1.root  uboone_response_55kV_gar_vw02_v0.1.root  uboone_response_60kV_gar_vw00_v0.1.root  uboone_response_60kV_gar_vw01_v0.1.root  uboone_response_60kV_gar_vw02_v0.1.root  uboone_response_70kV_vw00_v0.1.root  uboone_response_70kV_vw01_v0.1.root  uboone_response_70kV_vw02_v0.1.root  uboone_response_v1.3.root  uboone_response_vw00_nominal_v3.1.root  uboone_response_vw00_nominal_v3.10.root  uboone_response_vw00_nominal_v3.11.1.root  uboone_response_vw00_nominal_v3.13.root  uboone_response_vw00_nominal_v3.15.root  uboone_response_vw00_nominal_v3.16.root  uboone_response_vw00_nominal_v3.17.root  uboone_response_vw00_nominal_v3.3.root  uboone_response_vw00_nominal_v3.5.root  uboone_response_vw00_nominal_v3.6.root  uboone_response_vw00_nominal_v3.7.root  uboone_response_vw00_nominal_v3.9.root  uboone_response_vw00_nominal_v4.1.root  uboone_response_vw00_shortedU_v3.1.root  uboone_response_vw00_shortedU_v3.10.root  uboone_response_vw00_shortedU_v3.11.1.root  (+90 more)
SinglePhotonAnalysis/: CMakeLists.txt  MCC9_channel_list.txt  proton_conversion.root
(+181 files in other folders)
